kube-manifests/pod.test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      serviceAccountName: express-app
      volumes:
      - name: aws-express-secrets
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: aws-express-secrets
      containers:
      - name: nginx
        image: nginx
        volumeMounts:
        - name: aws-express-secrets
          mountPath: /mnt/secrets-store
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
