kube-manifests/01-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-backend-deployment
spec:
  selector:
    matchLabels:
      app: express-backend
  template:
    metadata:
      labels:
        app: express-backend
    spec:
      serviceAccountName: express-app
      containers:
      - name: express-backend
        image: CONTAINER_IMAGE
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: express-back-service
spec:
  type: ClusterIP
  selector:
    app: express-back
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
