kube-manifests/03-deployment-test.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-backend
  template:
    metadata:
      labels:
        app: express-backend
    spec:
      serviceAccountName: express-app
      volumes:
      - name: express-secrets
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: aws-secrets
      containers:
      - name: express-backend
        image: 125137910162.dkr.ecr.us-east-1.amazonaws.com/express-app:express-app-1.0.1
        volumeMounts:
        - name: express-secrets
          mountPath: /mnt/secrets-store
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"

---

apiVersion: v1
kind: Service
metadata:
  name: express-backend-service
  labels:
    app: express-backend
    tier: backend
spec:
  type: NodePort
  selector:
    app: express-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 31321
