kube-manifests/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-backend-ingress
  labels:
    app: express-backend
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: express-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: express-backend-service
      port:
        number: 80
